--- a/card.css
+++ b/card.css
@@ -12,7 +12,7 @@ body {
 .card-background {
   width:100%;
   height: 100%;
-  background: url(snow.png) center no-repeat;
+  background: url(snow.PNG) center no-repeat;
   background-size: cover;
   opacity: 0.5;
 }
