--- a/card.css
+++ b/card.css
@@ -34,7 +34,7 @@ body {
   box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
   text-align: center;
   transition:all 0.4s;
-  background: url(background.png) center no-repeat;
+  background: url(background.PNG) center no-repeat;
   background-size: 650px 500px;
 }
 .blog-card a{ 
