--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
 }
 .child {
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
 }
 #present {
   display:block; 
