--- a/index.css
+++ b/index.css
@@ -10,11 +10,13 @@
 }
 h1{
   text-align: center;
+  margin-bottom: 50px;
 }
 p {
   font-size: 18;
 }
 button {
+  display: block !important;
   margin-top: 20px;
   position: relative;
   left: 50%;
