--- a/winter2/card-content.css
+++ b/winter2/card-content.css
@@ -1,22 +1,3 @@
-/*@import url(//fonts.googleapis.com/css?family=Abril+Fatface|Droid+Serif:400,700,400italic,700italic);
-*/html,body{
-  height:100%
-}
-body {
-/*  background: linear-gradient(to bottom, rgba(0,5,10,0.4) 0%,rgba(0,0,0,0) 100%);
-*/  font-family: 'Droid Serif', serif;
-  /*background: url(snow.png) center no-repeat;
-  background-size: cover;
-  opacity: 0.5;*/
-}
-.card-background {
-  width:100%;
-  height: 100%;
-  background: url(snow.PNG) center no-repeat;
-  background-size: cover;
-  opacity: 0.5;
-}
-
 .blog-card {
   opacity: 1.0;
   max-width: 650px;
@@ -34,7 +15,7 @@ body {
   box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
   text-align: center;
   transition:all 0.4s;
-  background: url(background.PNG) center no-repeat;
+  background: url('img/card-background.jpg') center no-repeat;
   background-size: 650px 500px;
 }
 .blog-card a{ 
@@ -43,8 +24,8 @@ color:#fff;
   transition:all 0.2s
 }
 .blog-card .color-overlay {
-  background: rgba(83, 101, 110,0.3);
-  width: 650px;
+/*  background: rgba(83, 101, 110,0.3);
+*/  width: 650px;
   height: 500px;
   position: absolute;
   z-index: 10;
@@ -53,8 +34,8 @@ color:#fff;
   transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 .blog-card .gradient-overlay {  
-  background-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 21%);
-  width: 650px;
+/*  background-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 21%);
+*/  width: 650px;
   height: 500px;
   position: absolute;
   top: 350px;
@@ -69,14 +50,14 @@ color:#fff;
   bottom: 100px;
 }
 .blog-card:hover .color-overlay {
-  background: rgba(64, 64, 70,0.8);
+  background: rgba(42, 42, 48,0.8);
 }
 .blog-card:hover .title-content{
   margin-top:70px
 }
 .title-content {
   text-align: center;
-  margin: 170px 0 0 0;
+  margin: 190px 0 0 0;
   position: absolute;
   z-index: 20;
   width: 100%;
@@ -113,7 +94,7 @@ h3:after {
   height: 2px;
   margin: 20px auto;
   border: 0;
-  background: #cdb451;
+  background: #BDA26B;
   transition:all 0.2s
 }
 
@@ -197,7 +178,7 @@ h3:after {
   left: 0;
   z-index: 20;
   width:100%;
-  text-align:left
+  text-align:right;
 }
 .utility-info:after{
   content:" ";
@@ -216,9 +197,8 @@ h3:after {
 }
 .utility-list {
   list-style-type: none;
-  margin: 0 0 10px 20px;
+  margin: 0 20 10px 0px;
   padding: 0;
-  width: 100%;
 
 }
 .utility-list li {
@@ -402,7 +382,7 @@ h3:after {
     width:100%
 }
 .stats svg {
-    fill: #cdb451;
+    fill: #bda26b;
 }
 .stats svg, .loves .icon-heart {
     fill: rgba(47, 47, 49, 0) !important;
